fix atlas region overlay z-index

--- a/src/app.css
+++ b/src/app.css
@@ -1657,7 +1657,9 @@ input[type=number]::-webkit-outer-spin-button {
 	position: absolute;
 	left: 0;
 	top: 0;
+	z-index: 1
 }
+
 #tab-textures .preview-container #atlas-overlay .atlas-region {
 	border: 1px dashed rgb(214, 24, 195);
 	position: absolute;
